<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.leonardo.scurcola.CharacterSelection"
    android:background="#e15258">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatCharacter"
        android:textSize="45sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:id="@+id/questionCharacter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/demoniac"
        android:id="@+id/first"
        android:onClick="characterClick"
        android:layout_alignTop="@+id/second"
        android:layout_toStartOf="@+id/second" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/guard"
        android:id="@+id/second"
        android:onClick="characterClick"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/masons"
        android:id="@+id/third"
        android:onClick="characterClick"
        android:layout_alignTop="@+id/second"
        android:layout_toEndOf="@+id/second" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:id="@+id/fourth"
        android:onClick="characterClick"
        android:layout_below="@+id/first"
        android:layout_alignStart="@+id/first" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/villager"
        android:id="@+id/fifth"
        android:onClick="characterClick"
        android:layout_alignTop="@+id/fourth"
        android:layout_toEndOf="@+id/fourth" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/werehamster"
        android:id="@+id/sixth"
        android:onClick="characterClick"
        android:layout_alignBottom="@+id/fifth"
        android:layout_toEndOf="@+id/fifth" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/seventh"
        android:onClick="addButton"
        android:enabled="false"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/fourth"
        android:layout_alignStart="@+id/fourth" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:id="@+id/eighth"
        android:onClick="removeButton"
        android:layout_alignBottom="@+id/seventh"
        android:layout_alignEnd="@+id/sixth" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:id="@+id/ninth"
        android:onClick="toRandomAssignment"
        android:visibility="gone"
        android:layout_alignBottom="@+id/seventh"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/count"
        android:textSize="45sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
